# daeri

./: Cargo.toml
adshield-utils/: Cargo.toml  check_bots.regex  encryption.rs  header_utils_ext.rs  http_client.rs  into_bytes.rs  lib.rs  random.rs  sync_future.rs
daeri/: Cargo.toml
daeri/src/: handler.rs  lib.rs  main.rs  mock.rs  proxy.rs
daeri/tests/: simple.rs
shield/: Cargo.toml
shield/src/: cache.rs  error.rs  layer.rs  lib.rs  protect_policy.rs  result.rs  service.rs  storage.rs  util.rs
shield/src/cache/: in_memory.rs  redis.rs
src/: handler.rs  lib.rs  main.rs
