[package]
name = "adshield-utils"
version = "0.1.0"
authors = ["Jun Ryoung Ju <junryoungju@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
http = "0.2.8"
http-body = "0.4.4"
once_cell = "1.12.0"
pin-project = "1.0.8"
rand = "0.8.4"
regex = "1.5.6"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
serde = "1.0.131"
serde_json = "1.0.72"
sync_wrapper = "0.1.1"
thiserror = "1.0.30"
