[package]
name = "daeri"
version = "0.1.0"
edition = "2021"

[lib]
name = "daeri"

[[bin]]
name = "daeri"

[dependencies]
shield = { path = "../shield" }

axum = "0.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "filter"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3", features = ["gateway", "compression-full", "decompression-full"] }
anyhow = "1.0.58"
thiserror = "1.0.31"
http = "0.2.8"
futures = "0.3.21"
