[package]
name = "shield"
version = "0.1.0"
edition = "2018"

[dependencies]
adshield-utils = { path = "../adshield-utils" }
async-trait = "0.1.51"
http = "0.2.5"
http-serde = "1.0.3"
rand = "0.8.4"
seahash = "4.1.0"
serde = "1.0.130"
endorphin = "0.1.9"
tokio = { version = "1.14.0", features = ["full"] }
bytes = "1.1.0"
bincode = "1.3.3"
thiserror = "1.0.30"
anyhow = "1.0.51"
sync_wrapper = "0.1.1"
pin-project = "1.0.8"
bb8-redis = "0.11"
tracing = "0.1.29"
crc = "3.0.0"
syncwrap = "0.4.0"
futures = "0.3.21"
hyper = "0.14.19"
tower = "0.4.13"
axum = "0.5.11"
